package asteroidgame.objects;

/**
 * Contract for any object that needs to change over time.
 */
public interface Updatable {
    void update();
}